# Chess

./: CMakeLists.txt  README.md  bishop.cpp  bishop.h  board.cpp  board.h  board_state.h  casteling.cpp  casteling.h  castling.cpp  castling.h  game_legend.cpp  game_legend.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  main_state_machine.cpp  main_state_machine.h  move.cpp  move.h  notation_reader.cpp  notation_reader.h  null_piece.cpp  null_piece.h  pawn.cpp  pawn.h  piece.cpp  piece.h  piece_class.cpp  piece_class.h  queen.cpp  queen.h  rook.cpp  rook.h  state_base.cpp  state_base.h  state_exit.cpp  state_exit.h  (+6 more)
